--- a/packages/hashicon-react/package.json
+++ b/packages/hashicon-react/package.json
@@ -36,22 +36,15 @@
   },
   "homepage": "https://ETCDEVTeam.github.io/hashicon/examples/",
   "engines": {
-    "node": ">=8"
+    "node": ">=16"
   },
   "dependencies": {
     "@emeraldpay/hashicon": "^0.5.2",
     "react": "^16.8.0"
   },
   "devDependencies": {
-    "typescript": "^3.9.6",
-    "rimraf": "^2.6.3",
-    "jest": "24.8.0",
-    "@types/jest": "24.0.13",
-    "ts-jest": "24.0.2",
-    "jest-serial-runner": "1.1.0",
-    "@storybook/html": "^5.3.19",
-    "babel-loader": "^8.1.0",
-    "@babel/core": "^7.10.4",
-    "ts-loader": "^7.0.5"
+    "@types/react": "^18.2.0",
+    "rimraf": "^5.0.0",
+    "typescript": "^5.0.0"
   }
 }
