--- a/packages/hashicon/package.json
+++ b/packages/hashicon/package.json
@@ -13,9 +13,8 @@
     "clean": "rimraf lib",
     "build:ts": "tsc",
     "build": "npm run build:ts",
-    "prepublishClean": "rimraf lib/index.stories.*",
-    "prepublishOnly": "npm run clean && npm run test && npm run build && npm run prepublishClean",
-    "storybook": "start-storybook"
+    "prepublishOnly": "npm run clean && npm run test && npm run build",
+    "storybook": "storybook dev -p 6006"
   },
   "repository": {
     "type": "git",
@@ -48,22 +47,20 @@
   },
   "homepage": "https://ETCDEVTeam.github.io/hashicon/examples/",
   "engines": {
-    "node": ">=8"
+    "node": ">=16"
   },
   "dependencies": {
     "@stablelib/blake2s": "^1.0.0",
     "js-sha3": "^0.8.0"
   },
   "devDependencies": {
-    "typescript": "^3.9.6",
-    "rimraf": "^2.6.3",
-    "jest": "24.8.0",
-    "@types/jest": "24.0.13",
-    "ts-jest": "24.0.2",
-    "jest-serial-runner": "1.1.0",
-    "@storybook/html": "^5.3.19",
-    "babel-loader": "^8.1.0",
-    "@babel/core": "^7.10.4",
-    "ts-loader": "^7.0.5"
+    "@babel/core": "^7.23.0",
+    "@storybook/html": "^7.6.0",
+    "@storybook/html-webpack5": "^7.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.0",
+    "storybook": "^7.6.0",
+    "typescript": "^5.0.0"
   }
 }
