--- a/packages/hashicon/tsconfig.json
+++ b/packages/hashicon/tsconfig.json
@@ -1,18 +1,14 @@
 {
   "compilerOptions": {
-	"outDir": "./lib",
-	"declaration": true,
-	"lib": [
-	  "ES6",
-	  "ES2018",
-	  "DOM"
-	]
+    "outDir": "./lib",
+    "declaration": true,
+    "module": "commonjs",
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM"],
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "strict": false
   },
-  "include": [
-	"src/**/*.ts"
-  ],
-  "exclude": [
-	"../../node_modules",
-	"node_modules"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.stories.ts", "node_modules"]
 }
