--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "license": "Apache-2.0",
   "scripts": {
+    "dev": "yarn workspace @emeraldpay/hashicon run storybook",
     "build": "yarn workspaces run build"
   },
   "workspaces": [
