--- a/packages/hashicon/package.json
+++ b/packages/hashicon/package.json
@@ -55,6 +55,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.28.6",
+    "@babel/preset-typescript": "^7.28.5",
     "@storybook/html": "^7.6.0",
     "@storybook/html-webpack5": "^7.6.0",
     "react": "^18.2.0",
