--- a/packages/hashicon/package.json
+++ b/packages/hashicon/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@emeraldpay/hashicon",
-  "version": "0.5.2",
+  "name": "@ideamans-npm/hashicon",
+  "version": "0.6.0",
   "description": "Hashicon - a visual representation of a hash value, as a hexagon",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
